--- a/package.json
+++ b/package.json
@@ -1,50 +1,4 @@
 {
-  "expo": {
-    "name": "SEHAT",
-    "slug": "sehat",
-    "privacy": "public",
-    "version": "1.1.0",
-    "Platforms": [
-      "ios",
-      "android"
-    ],
-    "orientation": "portrait",
-    "sdkVersion": "39.0.4",
-    "icon": "./assets/images/new/icon.png",
-    "splash": {
-      "image": "./assets/images/new/splash.png",
-      "resizeMode": "contain"
-    }
-  },
-  "ios": {
-    "bundleIdentifier": "com.medical_app.SEHAT",
-    "buildNumber": "1.1.0",
-    "supportsTablet": true
-  },
-  "android": {
-    "package": "com.medical_app.SEHAT",
-    "VersionCode": 1
-  },
-  "permissions": [
-    "ACCESS_FINE_LOCATION",
-    "ACCESS_BACKGROUND_LOCATION",
-    "CAMERA",
-    "READ_EXTERNAL_STORAGE",
-    "ACCESS_WIFI_STATE",
-    "ACCESS_NETWORK_STATE"
-  ],
-  "assetBundlePatterns": [
-    "**/*"
-  ],
-  "updates": {
-    "fallbackToCacheTimeout": 0
-  },
-  "main": "node_modules/expo/AppEntry.js",
-  "splash": {
-    "image": "./assets/images/new/splash.png",
-    "resizeMode": "contain",
-    "backgroundColor": "#00e676"
-  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -57,12 +11,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.2",
-    "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.7",
-    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/material-bottom-tabs": "^5.3.10",
@@ -70,55 +23,60 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "eslint": "^7.17.0",
-    "expo": "^40.0.0",
-    "expo-asset": "~8.2.1",
-    "expo-constants": "~9.3.3",
-    "expo-font": "~8.4.0",
-    "expo-image-picker": "~9.2.0",
-    "expo-linking": "~2.0.0",
-    "expo-network": "~2.4.0",
-    "expo-splash-screen": "~0.8.1",
-    "expo-status-bar": "~1.0.3",
-    "expo-web-browser": "~8.6.0",
+    "expo": "^42.0.0",
+    "expo-asset": "~8.3.2",
+    "expo-constants": "~11.0.1",
+    "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-linking": "~2.3.1",
+    "expo-media-library": "~12.1.2",
+    "expo-network": "~3.2.0",
+    "expo-splash-screen": "~0.11.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "~9.2.0",
     "faker": "^5.1.0",
     "formik": "^2.2.6",
+    "i": "^0.3.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
-    "native-base": "^2.15.2",
+    "native-base": "^3.0.0-next.40",
+    "npm": "^7.19.1",
     "randomcolor": "^0.6.2",
-    "react": "^17.0.1",
+    "react": "16.13.1",
     "react-devtools": "^4.10.1",
     "react-dom": "16.13.1",
-    "react-native": "^0.63.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-base64": "^0.2.1",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-get-random-values": "^1.5.1",
-    "react-native-image-crop-picker": "^0.35.2",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-paper": "^4.7.1",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "^0.14.10",
+    "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "remotedev": "^0.2.9",
     "remotedev-server": "^0.3.1",
     "socket.io-client": "2.3.0",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.8"
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5",
+    "yup": "^0.32.8",
+    "expo-notifications": "~0.12.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "jest-expo": "^40.0.0",
+    "jest-expo": "^42.0.0",
     "remote-redux-devtools": "^0.5.16",
     "typescript": "~4.0.0"
   },
